# machine-info-rs

./: Cargo.toml
src/: machine.rs  monitor.rs
