[package]
name = "machine-info"
version = "1.0.9"
edition = "2021"
license-file = "LICENSE"
description = "CPU, GPU and memory monitor. Use it to track resources usage"
readme = "README.md"
repository = "https://github.com/wixet-limited/machine-info-rs"
homepage = "https://wixet.com"

categories = ["os"]
keywords = ["monitor", "nvidia", "gpu", "cpu", "memory"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sysinfo = {version = "0.37.2", default-features = false, features = ["system", "disk"]} # Disable multithread but enable system, disk
nvml-wrapper = "0.11.0"
anyhow = "1.0"
log = "0.4"
v4l = { version = "0.14.0", optional = true}


[features]
v4l = ["dep:v4l"]